Fixed search helper icon position on mobile.

--- a/themes/botwiki/css/main.2.89.css
+++ b/themes/botwiki/css/main.2.89.css
@@ -1024,9 +1024,15 @@ div.back-to-top:hover {
 }
 a#search-help {
   position: absolute;
-  margin-left: -15px;
+  margin-left: -1em;
   color: #dadada !important;
-  top: 30%;
+  top: 2em;
+}
+@media (min-width: 1000px) {
+  a#search-help {
+    top: 30%;
+    margin-left: -15px;
+  }
 }
 a#search-help:hover {
   border: none !important;
